<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Program!</string>
    <string name="error_setting">System error. Please reboot device !</string>
    <string name="username_password_empty">Email and password can not be empty.</string>
    <string name="username_password_not_exists">Email or password is invalid.</string>
    <string name="system_error">System error. Please reboot device !</string>
    <string name="internet_not_connect">Can not connect to internet.</string>
    <string name="not_send_website">You can not send data to internet.</string>
    <string name="use_account_old">System uses old account.</string>
    <string name="login_successful">Login successful.</string>
    <string name="start_service">Copy9 starts recording...</string>
    <string name="stop_service">Copy9 stops recording.</string>
    <string name="flag_start_service">Copy9 is running.</string>
    <string name="flag_stop_service">Copy9 is stopped.</string>
    <string name="error_secretkey">Secret key must be 5-11 characters.</string>
    <string name="error_gps_empty">GPS interval can not be empty.</string>
    <string name="error_horizontal_empty">Distance accuracy can not be empty.</string>
    <string name="error_vertical_empty">Altitude accuracy can not be empty.</string>
    <string name="error_gps_more_than">GPS interval must be greater than 3 minutes.</string>
    <string name="error_horizontal_more_than">GPS horizontal distance filter must be in range from 20 to 5000 meters.</string>
    <string name="error_vertical_more_than">Altitude accuracy must be greater than 5 meters.</string>
    <string name="error_max_device">The number of devices reached the maximum value. Try another account.</string>
    <string name="error_website_invalid">Website is invalid .</string>
    <string name="error_database">System error. Please try again.</string>
    <string name="question_save_setting">The setting has been changed.Do you want to save the changes.</string>
    <string name="gps_disabled_alert">Your GPS is disabled!\10 Would you like to enable it?</string>
    <string name="autoanswer_alert">Monitoring phone is empty!\10 Would you like to specify it?</string>
    <string name="app_name">Copy9</string>
    <string name="login_title">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="website_prompt">Choose a website</string>
    <string name="website">Website</string>
    <string name="other_website">Other Website</string>
    <string name="enter_website">Enter website:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="about_title">About</string>
    <string name="setting_title">Setting</string>
    <string name="activated_functions">Activate functions</string>
    <string name="sms">SMS</string>
    <string name="call">Call</string>
    <string name="url">URL</string>
    <string name="contact">Contact</string>
    <string name="spycall">Spycall</string>
    <string name="gps">GPS</string>
    <string name="monitoringphone">Monitoring phone</string>
    <string name="secretkey">Secret Key</string>
    <string name="gpsinterval">GPS Interval</string>
    <string name="verticalaccuracy">Altitude accuracy</string>
    <string name="horizontalaccuracy">Distance accuracy</string>
    <string name="setdefault">Set Default</string>
    <string name="savestart">Start</string>
    <string name="savestop">Stop</string>
    <string name="back">Back</string>
    <string name="minutes">minutes</string>
    <string name="meters">meters</string>
    <string name="general">General</string>
    <string name="close">Close</string>
    <string name="activecopy9">Active Copy9</string>
    <string name="save_and_back">Save &amp; Back</string>
    <string name="auto_answer">Auto Answer</string>
    <string name="save_position">Save Position</string>
    <string name="capture_position_every">Capture position every:</string>
    <string name="capture_when_phone_move_over">Distance filter:</string>
</resources>
