<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/website"/>
    <Spinner android:id="@+id/spnWebsite" android:layout_width="320px" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/website_prompt"/>
    <TextView android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email_address"/>
    <EditText android:id="@+id/txtUserName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:width="320dp" android:maxLength="50"/>
    <TextView android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password"/>
    <EditText android:id="@+id/txtPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:width="320dp" android:password="true" android:maxLength="30"/>
    <LinearLayout android:layout_gravity="left" android:orientation="horizontal" android:paddingLeft="210dp" android:paddingBottom="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@+id/btnLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login" android:width="110dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:id="@+id/btnSetting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting" android:width="105dp"/>
        <Button android:id="@+id/btnAbout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about" android:width="105dp"/>
        <Button android:id="@+id/btnExit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exit" android:width="110dp"/>
    </LinearLayout>
</LinearLayout>
